--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -59,7 +59,7 @@
         </ion-button>
       </div>
       <div *ngIf="idRol=='3'" class="centrar espacio-abajo">
-        <ion-button>
+        <ion-button (click)="agregarUsuario()">
           <ion-icon slot="start" name="add"></ion-icon>
           Agregar Administrador
         </ion-button>
