--- a/src/app/pages/producto/producto.page.html
+++ b/src/app/pages/producto/producto.page.html
@@ -13,19 +13,22 @@
   <hr>
 
   <div class="linea margin-auto bordear">
+    <form [formGroup]="cantForm" (ngSubmit)="validarProducto()">
     <div class="contenedor-cards bordear">
-      <div class="margin-auto centrar"><img src="assets/zapatilla.png" alt="" class="tamano-zapatilla bordear"></div>
+      <div class="margin-auto centrar contenedor-imagen espacio2"><img [src]="zapatillaSelec.zfoto" alt="" class="tamano-zapatilla margin-top bordear"></div>
 
       <div class="centrar">
 
-        <p class="letras-negrita2">RDB Game Hombre Celeste</p>
-        <p class="letras-negrita2">Puma</p>
+        <p class="letras-negrita">{{zapatillaSelec.znombre}}</p>
+        <p class="letras-negrita2">{{zapatillaSelec.mnombre}}</p>
+        <p *ngIf="cantSelec === -1" class="letras-negrita2">Disponibilidad total = {{totalCantidad}}</p>
+        <p *ngIf="cantSelec >=0" class="letras-negrita2">Disponible = {{cantSelec}}</p>
       </div>
 
       <div class="contenedor-lista margin-auto">
         <ion-list class="sin-padding">
           <ion-item>
-            <ion-select aria-label="Talla" interface="action-sheet" placeholder="Talla (US)" [(ngModel)]="talla">
+            <ion-select formControlName="talla" aria-label="Talla" interface="action-sheet" placeholder="Talla (US)" [(ngModel)]="talla" (ionChange)="onTallaChange()">
               <ion-select-option value="7.5">7.5 (25.5 cms)</ion-select-option>
               <ion-select-option value="8">8 (26 cms)</ion-select-option>
               <ion-select-option value="8.5">8.5 (26.5 cms)</ion-select-option>
@@ -34,42 +37,45 @@
               <ion-select-option value="10">10 (28 cms)</ion-select-option>
               <ion-select-option value="10.5">10.5 (28.5 cms)</ion-select-option>
               <ion-select-option value="11">11 (29 cms)</ion-select-option>
-              <ion-select-option value="11.5">11.5 (29.5 cms)</ion-select-option>
             </ion-select>
           </ion-item>
         </ion-list>
+      </div>
+      <div class="contenedor-compra centrar margin-auto" *ngIf="cantForm.get('talla')?.invalid && (cantForm.get('talla')?.dirty) || cantForm.get('talla')?.touched">
+        <p *ngIf="cantForm.get('talla')?.hasError('required')" class="color-negro negrita">Debe seleccionar una talla.</p>
       </div>
       <hr>
       <div class="contenedor-lista margin-auto">
         <ion-list class="sin-padding">
           <ion-item>
-            <ion-select aria-label="Cantidad" interface="action-sheet" placeholder="Cantidad" [(ngModel)]="marca">
-              <ion-select-option value="1">1 Unidad.</ion-select-option>
-              <ion-select-option value="2">2 Unidades.</ion-select-option>
-              <ion-select-option value="3">3 Unidades.</ion-select-option>
-              <ion-select-option value="4">4 Unidades.</ion-select-option>
-              <ion-select-option value="5">5 Unidades.</ion-select-option>
-              <ion-select-option value="6">6 Unidades.</ion-select-option>
-              <ion-select-option value="7">7 Unidades.</ion-select-option>
-              <ion-select-option value="8">8 Unidades.</ion-select-option>
-              <ion-select-option value="9">9 Unidades.</ion-select-option>
-              <ion-select-option value="10">10 Unidades.</ion-select-option>
+            <ion-select formControlName="cantidad" aria-label="Cantidad" interface="action-sheet" [(ngModel)]="cantidad" placeholder="Cantidad" [disabled]="cantForm.get('talla')?.invalid || cantForm.get('cantidad')?.disabled ?? false">
+              <ion-select-option [value]="1">1 Unidad.</ion-select-option>
+              <ion-select-option [value]="2">2 Unidades.</ion-select-option>
+              <ion-select-option [value]="3">3 Unidades.</ion-select-option>
+              <ion-select-option [value]="4">4 Unidades.</ion-select-option>
+              <ion-select-option [value]="5">5 Unidades.</ion-select-option>
+              <ion-select-option [value]="6">6 Unidades.</ion-select-option>
+              <ion-select-option [value]="7">7 Unidades.</ion-select-option>
+              <ion-select-option [value]="8">8 Unidades.</ion-select-option>
+              <ion-select-option [value]="9">9 Unidades.</ion-select-option>
+              <ion-select-option [value]="10">10 Unidades.</ion-select-option>
             </ion-select>
           </ion-item>
         </ion-list>
       </div>
+      <div class="contenedor-compra centrar margin-auto" *ngIf="cantForm.get('cantidad')?.invalid && (cantForm.get('cantidad')?.dirty) || cantForm.get('cantidad')?.touched">
+        <p *ngIf="cantForm.get('cantidad')?.hasError('required')" class="color-negro negrita">Debe seleccionar la cantidad deseada.</p>
+        <p *ngIf="cantForm.get('cantidad')?.hasError('sinCantidad')" class="color-negro negrita">Producto sin existencias.</p>
+        <p *ngIf="cantForm.get('cantidad')?.hasError('cantidadExcedida')" class="color-negro negrita">La cantidad seleccionada exceden las existencias.</p>
+      </div>
       <hr>
         <div class="centrar">
-          <p class="letras-negrita2 letras-grandes">$33.590</p>
-        </div>
-        <div class="contenedor-compra centrar margin-auto">
-          <ion-button (click)="validarProducto()">
-            <ion-icon slot="start" name="cart"></ion-icon>
-            Comprar
-          </ion-button>
+          <p class="letras-negrita2 letras-grandes espacio">{{zapatillaSelec.zprecio}}</p>
         </div>
 
-    </div>
+        <div class="contenedor-compra margin-auto centrar espacio"><ion-button type="submit" [disabled]="cantForm.invalid || cantSelec <=0" class="espacio"><ion-icon slot="start" name="cart"></ion-icon>Comprar</ion-button></div>
+      </div>
+      </form>
   </div>
 
 </ion-content>
