--- a/src/app/pages/zapatillas/zapatillas.page.html
+++ b/src/app/pages/zapatillas/zapatillas.page.html
@@ -98,24 +98,25 @@
         <ion-icon slot="start" name="add"></ion-icon>
       </ion-button>
     </div>
-
   </div>
 
   <hr>
 
-  <div class="contenedor-cards">
-    <div (click)="irProducto()">
-      <div class="margin-auto centrar"><img src="assets/zapatilla.png" alt="" class="tamano-zapatilla margin-top"></div>
+  <div *ngFor="let zapatilla of arregloZapatillas" class="contenedor-cards espacio">
+    <div (click)="irProducto(zapatilla.idzapatilla)">
+      <div class="margin-auto centrar contenedor-imagen espacio2">
+          <img [src]="zapatilla.zfoto" alt="Zapatilla" class="tamano-zapatilla margin-top">    
+      </div>
         <div class="contenedor-letras-card margin-auto">
-          <p class="letras-negrita2">RDB Game Hombre Celeste</p>
-          <p class="letras-negrita2">Puma</p>
+          <p class="letras-negrita2">{{zapatilla.znombre}}</p>
+          <p class="letras-negrita2">{{zapatilla.mnombre}}</p>
         </div>
         <hr>
         <div class="centrar tamano-letras letras-negrita">
-          <p class="letras-negrita2">$33.590</p>
+          <p class="letras-negrita2">{{zapatilla.zprecio}} </p>
         </div>
       </div>
-        <div *ngIf="idRol=='3'" class="contenedor-botones margin-auto contenedor-flex espacio-precio">
+        <div *ngIf="idRol=='3'" class="contenedor-botones margin-auto contenedor-flex espacio-precio espacio2">
           <ion-button class="boton-editar" (click)="irEditar()">
             Editar
             <ion-icon slot="start" name="pencil"></ion-icon>
@@ -125,10 +126,7 @@
             <ion-icon slot="start" name="ban"></ion-icon>
           </ion-button>
         </div>
-    <br>
   </div>
-
-  <hr>
 
 </ion-content>
 
