--- a/src/app/pages/zapatillas/zapatillas.page.scss
+++ b/src/app/pages/zapatillas/zapatillas.page.scss
@@ -70,9 +70,21 @@ ion-title{
 }
 
 .tamano-zapatilla{
-    width: 85%;
-    height: 85%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    height: auto;
+    width: auto;
 }
+
+.contenedor-imagen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 200px;
+    overflow: hidden;
+    }
 
 .contenedor-footer{
     width: 25%;
@@ -148,4 +160,12 @@ ion-title{
     width: 40%;
     font-size: 13px;
     color: white;
+}
+
+.espacio{
+    margin-bottom: 20px;
+}
+
+.espacio2{
+    margin-bottom: 5px;
 }
