--- a/src/app/pages/inicio/inicio.page.scss
+++ b/src/app/pages/inicio/inicio.page.scss
@@ -26,10 +26,7 @@ ion-toolbar{
     text-align: center;
     align-items: center;
 }
-.tamano-general-imagenes{
-    max-width: 40px;
-    max-height: 40px;
-}
+
 .color-negro{
     color:black;
 }
@@ -46,20 +43,38 @@ ion-toolbar{
     width: 90%;
     background-color: black;
     border-radius: 10px;
-    
+    align-items: center;
 }
 
 .margin-auto{
     margin: auto;
 }
 
-.tamano-zapatilla{
-    width: 85%;
-    height: 85%;
-}
 .letras-negrita2{
     font-weight: 500;
 }
 .margin-top{
     margin-top: 10px;
+}
+
+.contenedor-imagen{
+    display: flex;
+    width: 100px;
+    height: 150px;
+    overflow: hidden;
+    margin-left: 15px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    }
+    
+.tamano-imagen{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    height: auto;
+    width: auto;
+}
+
+.espacio{
+    margin-bottom: 10px;
 }
