--- a/src/app/pages/perfil/perfil.page.scss
+++ b/src/app/pages/perfil/perfil.page.scss
@@ -46,7 +46,7 @@ ion-button{
 }
 
 .letra-grande{
-    font-size: 17px;
+    font-size: 16px;
 }
 
 .espacio-abajo{
@@ -62,3 +62,19 @@ ion-button{
     justify-content: space-between;
     align-items: center;
 }
+
+.input-disabled{
+    opacity: 1;
+    color: white;
+}
+
+.custom-label{
+    font-weight: 600;
+    margin-bottom: 0;
+  }
+
+  .custom-input{
+    --padding-top:0;
+    padding-top: 0;
+    margin-top:-8px;
+  }
