--- a/src/app/pages/zapatillas/zapatillas.page.html
+++ b/src/app/pages/zapatillas/zapatillas.page.html
@@ -102,8 +102,8 @@
 
   <hr>
 
-  <div *ngFor="let zapatilla of arregloZapatillas" class="contenedor-cards espacio">
-    <div (click)="irProducto(zapatilla.idzapatilla)">
+  <div *ngFor="let zapatilla of arregloFiltrado" class="contenedor-cards espacio">
+    <div  (click)="irProducto(zapatilla.idzapatilla)">
       <div class="margin-auto centrar contenedor-imagen espacio2">
           <img [src]="zapatilla.zfoto" alt="Zapatilla" class="tamano-zapatilla margin-top">    
       </div>
@@ -112,7 +112,7 @@
           <p class="letras-negrita2">{{zapatilla.mnombre}}</p>
         </div>
         <hr>
-        <div class="centrar tamano-letras letras-negrita">
+        <div class="centrar tamano-letras letras-negrita espacio">
           <p class="letras-negrita2">{{zapatilla.zprecio | preciochile}} </p>
         </div>
       </div>
@@ -121,7 +121,7 @@
             Editar
             <ion-icon slot="start" name="pencil"></ion-icon>
           </ion-button>
-          <ion-button class="boton-deshabilitar">
+          <ion-button class="boton-deshabilitar" (click)="confirmarDeshabilitar(zapatilla.idzapatilla)">
             Deshabilitar
             <ion-icon slot="start" name="ban"></ion-icon>
           </ion-button>
